[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/GUI/PauseMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.203922, 0.168627, 0.168627, 1 )
border_width_left = 3
border_width_top = 5
border_width_right = 3
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="PauseMenu" type="PopupPanel"]
pause_mode = 2
margin_right = 559.999
margin_bottom = 397.0
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 50.0
margin_top = 5.0
margin_right = 510.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 387.0
custom_constants/separation = 46
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 460.0
margin_bottom = 74.0
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 460.0
margin_bottom = 136.0

[node name="MasterLabel" type="Label" parent="MarginContainer/VBoxContainer/MasterVolume"]
margin_top = 1.0
margin_right = 48.0
margin_bottom = 15.0
text = "Master:"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MasterVolume"]
margin_left = 52.0
margin_right = 460.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
rounded = true
tick_count = 11
ticks_on_borders = true

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 460.0
margin_bottom = 198.0

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/MusicVolume"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicVolume"]
margin_left = 46.0
margin_right = 460.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
rounded = true
tick_count = 11
ticks_on_borders = true

[node name="SoundVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 460.0
margin_bottom = 260.0

[node name="SoundLabel" type="Label" parent="MarginContainer/VBoxContainer/SoundVolume"]
margin_top = 1.0
margin_right = 89.0
margin_bottom = 15.0
text = "Sound Effects:"

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SoundVolume"]
margin_left = 93.0
margin_right = 460.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
rounded = true
tick_count = 11
ticks_on_borders = true

[node name="Unpause" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 196.0
margin_top = 306.0
margin_right = 264.0
margin_bottom = 326.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Unpause"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/Unpause" to="." method="_on_Unpause_pressed"]
